k8s/apps/tuse/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      annotations:
        fluentbit.io/exclude: "true"
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/tuse:master@sha256:b6b44e495e86e3dff2e02a902fda8147dc65098afc74f2d28b2a6f5a68bd004e
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/plugins/config
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          hostPath:
            path: /opt/k8s-volumes/tuse/config
            type: DirectoryOrCreate
      restartPolicy: Always
